@@ -123,7 +123,7 @@ namespace libtorrent
 #endif
 
 		sha1_hash const& info_hash() const
-		{ return m_torrent_file->info_hash(); }
+		{ return m_torrent_file ? m_torrent_file->info_hash() : sha1_hash(); }
 
 		// starts the announce timer
 		void start();
